# ssh-frontiere

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: GUIDE-ADMINISTRATEUR.md
docs/audits/consolidation/: security-audit.md  simplification.md  test-coverage-baseline.md  test-coverage.md
docs/audits/grids/: code-review.md  (+1 more)
docs/decisions/: 0001-format-configuration-toml.md  0002-modele-secrets-trois-niveaux.md  0003-contrat-interface-json.md  0004-resolution-par-contexte.md  0005-sha256-implementation.md  0006-protocole-entetes.md  0007-environnement-test-ssh-e2e.md  0008-tags-visibilite-filtrage-horizontal.md  0009-arguments-nommes-valeurs-defaut.md  0010-nonce-optionnel-authentification.md  0011-streaming-stdout-stderr-ligne-par-ligne.md  0012-texte-libre-ressources.md  0013-consolidation-pre-publication.md
docs/public/: config.toml
docs/scenarios/: auth-attacks.md  config-errors.md  injection-attempts.md  output-edge-cases.md  protocol-abuse.md  rbac-escalation.md  session-abuse.md  timeout-crashes.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64.rs  fuzz_config_toml.rs  fuzz_hex_decode.rs  fuzz_parse_command.rs  fuzz_parse_line.rs  fuzz_read_body.rs  fuzz_sha256.rs  fuzz_transpose_command.rs  fuzz_xor_encrypt.rs
src/: auth.rs  auth_tests.rs  chain_exec.rs  chain_exec_tests.rs  chain_parser.rs  chain_parser_tests.rs  config.rs  config_tests.rs  crypto.rs  crypto_tests.rs  discovery.rs  discovery_tests.rs  dispatch.rs  dispatch_tests.rs  executor.rs  executor_tests.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  orchestrator.rs  output.rs  output_tests.rs  proptest_tests.rs  protocol.rs  protocol_tests.rs
tests/: conformance.rs  integration.rs
tests/e2e-ssh/: .gitignore  config-noauth.toml  config-simple-auth.toml  config.toml  docker-compose.yml  setup-keys.sh
tests/fixtures/: config.toml  conformance-scenarios.json  self-signal.sh  test-config-mask.toml  test-config-named-args.toml  test-config-simple-auth.toml  test-config-tags.toml  test-config.toml  trap-sigterm.sh
tests/scenarios/: conftest.py  run_all.py  test_auth_attacks.py  test_config_errors.py  test_injection_attempts.py  test_output_edge_cases.py  test_protocol_abuse.py  test_rbac_escalation.py  test_session_abuse.py  test_timeout_crashes.py
(+215 files in other folders)
